k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teknoloji-haberleri
  labels:
    app.kubernetes.io/name: teknoloji-haberleri
    app.kubernetes.io/part-of: teknoloji-haberleri
